nixrs-derive-tests/tests/ui/deserialize_from_str_missing.stderr
error[E0277]: the trait bound `Test: FromStr` is not satisfied
 --> tests/ui/deserialize_from_str_missing.rs
  |
  | #[nix(from_str)]
  |       ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromStr` is not implemented for `Test`
 --> tests/ui/deserialize_from_str_missing.rs
  |
  | pub struct Test;
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromStr`:
            Bare<F>
            Base16<H>
            Base32<H>
            ByteString
            CString
            ContentAddress
            ContentAddressMethodAlgorithm
            DrvOutput
          and $N others
